# joj

./: .gitignore  CMakeLists.txt  README.md
include/joj/math/: CMakeLists.txt  jmath.cpp  jmath.h  jvector3.h  jvector4.h
include/joj/renderer/: CMakeLists.txt  buffer_usage.h  color.h  constant_buffer.h  cpu_access_type.h  data_format.h  font.h  index_buffer.h  input_desc.h  input_layout.h  primitive_topology.h  rasterizer_state.h  renderer.h  sampler_state.h  shader.h  shader_library.h  shader_model.h  sprite.h  sprite_animation_data.h  sprite_sheet.h  texture2d.h  texture_manager.h  vertex.h  vertex_buffer.h  viewport.h
include/joj/renderer/d3d11/: CMakeLists.txt  command_list_d3d11.h  constant_buffer_d3d11.h  constant_buffer_data_d3d11.h  font_d3d11.h  graphics_device_d3d11.h  index_buffer_d3d11.h  index_buffer_data_d3d11.h  input_layout_d3d11.h  input_layout_data_d3d11.h  pixel_shader_data_d3d11.h  renderer_d3d11.h  sampler_state_d3d11.h  shader_d3d11.h  shader_library_d3d11.h  sprite_d3d11.h  sprite_sheet_d3d11.h  texture2d_d3d11.h  texture2d_data_d3d11.h  texture_manager_d3d11.h  vertex_buffer_d3d11.h  vertex_buffer_data_d3d11.h  vertex_shader_data_d3d11.h
include/joj/renderer/gl/: CMakeLists.txt
include/joj/renderer/gui/: CMakeLists.txt  button.h  canvas.h  gui.h  widget.h
joj/src/: CMakeLists.txt  engine.cpp  error_code.cpp  logger_win32.cpp
joj/src/platform/: CMakeLists.txt  timer.cpp  window.cpp
joj/src/platform/win32/: CMakeLists.txt  input_win32.cpp  timer_win32.cpp  window_win32.cpp
joj/src/renderer/: CMakeLists.txt  index_buffer.cpp  input_layout.cpp  renderer.cpp  sampler_state.cpp
joj/src/renderer/d3d11/: CMakeLists.txt  constant_buffer_d3d11.cpp  (+8 more)
joj/src/resources/: CMakeLists.txt  animation_clip.cpp  basic_model.cpp  basic_skinned_model.cpp  bone_animation.cpp  key_frame.cpp  m3d_loader.cpp  mesh.cpp  mesh_old.cpp
joj/src/systems/: CMakeLists.txt
samples/: CMakeLists.txt  hello_triangle.cpp  hello_triangle.h  main.cpp  main_win32.cpp  main_x11.cpp  test_app.cpp  test_app.h
samples/models/: AnimSimpleCube.gltf  BiggerCubeSRT.gltf  Cube.gltf  Plane.gltf  Triangle.gltf  circle1.txt  cube1.txt  cubeNew1.txt  monkey1.txt  simpleSpaceShip1.txt  uvSphere1.txt
samples/sandbox/: app2d_test.cpp  app2d_test.h  app3d_test.cpp  app3d_test.h  app_test.cpp  app_test.h  gui_test.cpp  gui_test.h
samples/shaders/: Canvas.hlsl  Font.hlsl  GUITest.hlsl  JSFTest.hlsl  LightHelper.hlsl  M3DTest.hlsl  NormalMap.hlsl  Physics.hlsl  SimpleModel.hlsl  Sprite.hlsl
samples/textures/: GravityGuy.dds  error.dds
src/: CMakeLists.txt  engine.cpp  error_code.cpp  joj.cpp  logger_win32.cpp
src/application/: CMakeLists.txt  app.cpp
src/core/: CMakeLists.txt  color.cpp  error_code.cpp  logger_win32.cpp
src/core/math/: CMakeLists.txt  jmath.cpp
src/core/win32/: CMakeLists.txt  logger_win32.cpp  memory_win32.cpp  string_utils_win32.cpp
src/core/x11/: CMakeLists.txt  logger_x11.cpp  memory_x11.cpp  string_utils_x11.cpp
src/eap/: CMakeLists.txt  lexer.cpp  node.cpp  parser.cpp  symbol_table.cpp
src/engine/: CMakeLists.txt  engine.cpp
src/events/: CMakeLists.txt  event_manager.cpp  jevent.cpp
src/gui/: CMakeLists.txt  jbutton.cpp  jevent.cpp  jgui_event.cpp  jwidget.cpp
src/gui/win32/: CMakeLists.txt  jwidget_factory_win32.cpp
src/jscript/: CMakeLists.txt  lexer.cpp  node.cpp  parser.cpp  symbol_table.cpp
src/platform/: CMakeLists.txt  input.cpp  timer.cpp  window.cpp
src/platform/win32/: CMakeLists.txt  input_win32.cpp  timer_win32.cpp  window_factory_win32.cpp  window_procedure_win32.cpp  window_win32.cpp
src/platform/x11/: CMakeLists.txt  window_x11.cpp
src/renderer/: CMakeLists.txt  constant_buffer.cpp  font.cpp  index_buffer.cpp  input_layout.cpp  renderer.cpp  sampler_state.cpp  shader.cpp  sprite.cpp  sprite_sheet.cpp  texture2d.cpp  texture_manager.cpp  vertex_buffer.cpp  viewport.cpp
src/renderer/d3d11/: CMakeLists.txt  DDSTextureLoader11.cpp  WICTextureLoader.cpp  constant_buffer_d3d11.cpp  font_d3d11.cpp  index_buffer_d3d11.cpp  input_layout_d3d11.cpp  renderer_d3d11.cpp  sampler_state_d3d11.cpp  shader_d3d11.cpp  shader_library_d3d11.cpp  sprite_d3d11.cpp  sprite_sheet_d3d11.cpp  texture2d_d3d11.cpp  texture_manager_d3d11.cpp  vertex_buffer_d3d11.cpp
src/renderer/gl/: CMakeLists.txt  constant_buffer_gl.cpp  renderer_gl.cpp  shader_gl.cpp
src/renderer/gui/: CMakeLists.txt  button.cpp  canvas.cpp  gui.cpp  widget.cpp
src/resources/: CMakeLists.txt  animation_channel.cpp  animation_clip.cpp  basic_model.cpp  basic_skinned_model.cpp  bone_animation.cpp  buffer.cpp  buffer_type.cpp  buffer_view_target.cpp  component_type.cpp  data_type.cpp  gltf_importer.cpp  interpolation_type.cpp  key_frame.cpp  m3d_loader.cpp  mesh.cpp  mesh_old.cpp  obj_loader.cpp  old_gltf_importer.cpp  primitive_mode.cpp  scene_node.cpp  skinned_data.cpp  submesh.cpp
src/resources/d3d11/: CMakeLists.txt  basic_model_d3d11.cpp  basic_skinned_model_d3d11.cpp  mesh_d3d11.cpp  mesh_d3d11_old.cpp  model_manager_d3d11.cpp
src/resources/gltf/: CMakeLists.txt  gltf_accessor.cpp  gltf_acessor.cpp  gltf_animation_channel.cpp  gltf_animation_sampler.cpp  gltf_buffer_view.cpp  gltf_importer.cpp  gltf_model.cpp  gltf_node.cpp  gltf_primitive.cpp  gltf_sampler.cpp  gltf_scene.cpp  gltf_skin.cpp
src/systems/: CMakeLists.txt  systems.cpp
src/systems/camera/: CMakeLists.txt  camera.cpp  camera2d.cpp  free_camera.cpp
src/systems/light/: CMakeLists.txt  light.cpp  light_debug.cpp
src/systems/material/: CMakeLists.txt  material.cpp
src/systems/physics/: CMakeLists.txt  geometry.cpp  rect.cpp
src/systems/scene/: CMakeLists.txt  scene.cpp  scene_object3d.cpp
src/utils/: CMakeLists.txt  json_lexer.cpp  json_parser.cpp  json_token_type.cpp  json_value.cpp
tests/: CMakeLists.txt  joj_tests_eap.cpp  joj_tests_gltf_importer.cpp  joj_tests_jscript.cpp  joj_tests_json_lexer.cpp  joj_tests_vec3.cpp  joj_tests_vec4.cpp  joj_tests_vector.cpp  joj_tests_vector3.cpp  joj_tests_vector4.cpp
tests/scripts/: simple_main.eap  simple_main.jsc  var_declaration.jsc
(+237 files in other folders)
